@@ -1,44 +1,30 @@
 package com.example.InternalControl.controller.admin;
 
-import com.example.InternalControl.controller.admin.AuditLogController;
-
-import com.example.InternalControl.model.audit.ActionType;
+import com.example.InternalControl.AbstractIntegrationTest;
 import com.example.InternalControl.model.audit.AuditLog;
-import com.example.InternalControl.security.CustomUserDetails;
-import com.example.InternalControl.security.JwtService;
 import com.example.InternalControl.service.audit.AuditLogService;
-import com.example.InternalControl.service.user.UserOrganizationService;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
-import org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 /**
- * @author TriTacLe
- * @since 1.0
+ * Integration tests for AuditLogController using TestContainers.
  */
-@WebMvcTest(controllers = AuditLogController.class, excludeAutoConfiguration = {DataSourceAutoConfiguration.class, HibernateJpaAutoConfiguration.class})
+@SpringBootTest
 @AutoConfigureMockMvc(addFilters = false)
-class AuditLogControllerTest {
+class AuditLogControllerTest extends AbstractIntegrationTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -46,88 +32,44 @@ class AuditLogControllerTest {
     @MockBean
     private AuditLogService auditLogService;
 
-    @MockBean
-    private UserOrganizationService userOrgService;
-
-    @MockBean
-    private JwtService jwtService;
-
-    private AuditLog mockAuditLog;
-
-    @BeforeEach
-    void setUp() {
-        CustomUserDetails userDetails = new CustomUserDetails(1L, "test@example.com", "password", 
-            Collections.singletonList(new SimpleGrantedAuthority("ROLE_ADMIN")));
-        
-        Authentication auth = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
-        SecurityContextHolder.getContext().setAuthentication(auth);
-        
-        // Mock userOrgService to return true for organization access
-        when(userOrgService.isUserInOrganization(anyLong(), anyInt())).thenReturn(true);
-        
-        mockAuditLog = AuditLog.builder()
-                .auditLogId(1L)
-                .actionType("CREATE")
-                .entityType("DEVIATION_REPORT")
-                .createdAt(LocalDateTime.now())
-                .build();
-    }
+    private static final Integer ORG_NUMBER = 123456789;
+    private static final String BASE_URL = "/api/v1/admin/audit-logs";
 
     @Test
-    void getAuditLogsByOrganization_AsAdmin_ReturnsOk() throws Exception {
-        List<AuditLog> logs = Arrays.asList(mockAuditLog);
-        when(auditLogService.getAuditLogsByOrganization(anyInt())).thenReturn(logs);
+    @WithMockUser(roles = {"ADMIN"})
+    void getAuditLogs_AsAdmin_ReturnsOk() throws Exception {
+        // Given
+        AuditLog log = new AuditLog();
+        log.setAuditLogId(1L);
+        log.setActionType("CREATE");
+        log.setCreatedAt(LocalDateTime.now());
 
-        mockMvc.perform(get("/api/v1/admin/audit-log")
-                        .param("orgNumber", "937219997"))
+        when(auditLogService.getAuditLogsByOrganization(ORG_NUMBER)).thenReturn(List.of(log));
+
+        // When & Then
+        mockMvc.perform(get(BASE_URL)
+                        .param("orgNumber", ORG_NUMBER.toString()))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].auditLogId").value(1));
     }
 
     @Test
-    void getAuditLogsByOrganization_AsManager_ReturnsOk() throws Exception {
-        List<AuditLog> logs = Arrays.asList(mockAuditLog);
-        when(auditLogService.getAuditLogsByOrganization(anyInt())).thenReturn(logs);
-
-        mockMvc.perform(get("/api/v1/admin/audit-log")
-                        .param("orgNumber", "937219997"))
-                .andExpect(status().isOk());
+    @WithMockUser(roles = {"MANAGER"})
+    void getAuditLogs_AsManager_ReturnsForbidden() throws Exception {
+        // When & Then
+        mockMvc.perform(get(BASE_URL)
+                        .param("orgNumber", ORG_NUMBER.toString()))
+                .andExpect(status().isForbidden());
     }
-
-    // @Test
-    // void getAuditLogsByOrganization_Unauthenticated_ReturnsUnauthorized() throws Exception {
-    //     // Note: With addFilters=false, security filters are not tested
-    //     mockMvc.perform(get("/api/v1/admin/audit-log")
-    //                     .param("orgNumber", "937219997"))
-    //             .andExpect(status().isUnauthorized());
-    // }
 
     @Test
-    void getAuditLogsByActionType_ReturnsFilteredLogs() throws Exception {
-        List<AuditLog> logs = Arrays.asList(mockAuditLog);
-        when(auditLogService.getAuditLogsByActionType(anyInt(), any())).thenReturn(logs);
+    @WithMockUser(roles = {"ADMIN"})
+    void getAuditLogsByUser_AsAdmin_ReturnsOk() throws Exception {
+        // Given
+        when(auditLogService.getAuditLogsByUser(1L)).thenReturn(List.of());
 
-        mockMvc.perform(get("/api/v1/admin/audit-log/action/CREATE")
-                        .param("orgNumber", "937219997"))
+        // When & Then
+        mockMvc.perform(get(BASE_URL + "/user/1"))
                 .andExpect(status().isOk());
     }
-
-    // @Test
-    // void getAuditLogsByUser_ReturnsUserLogs() throws Exception {
-    //     // Note: Controller doesn't have /by-user endpoint
-    //     List<AuditLog> logs = Arrays.asList(mockAuditLog);
-    //     when(auditLogService.getAuditLogsByUser(anyLong())).thenReturn(logs);
-    //
-    //     mockMvc.perform(get("/api/v1/admin/audit-log/by-user/1")
-    //                     .param("orgNumber", "937219997"))
-    //             .andExpect(status().isOk());
-    // }
-
-    // @Test
-    // void getAuditLogsByOrganization_AsEmployee_ReturnsForbidden() throws Exception {
-    //     // Note: With addFilters=false, role-based access control is not tested
-    //     mockMvc.perform(get("/api/v1/admin/audit-log")
-    //                     .param("orgNumber", "937219997"))
-    //             .andExpect(status().isForbidden());
-    // }
 }
