@@ -1,27 +1,23 @@
 package com.example.InternalControl.controller.training;
 
+import com.example.InternalControl.AbstractIntegrationTest;
+import com.example.InternalControl.dto.training.TrainingRecordRequest;
 import com.example.InternalControl.model.training.TrainingRecord;
-import com.example.InternalControl.security.CustomUserDetails;
-import com.example.InternalControl.security.JwtService;
+import com.example.InternalControl.model.training.TrainingStatus;
+import com.example.InternalControl.model.training.TrainingType;
 import com.example.InternalControl.service.training.TrainingRecordService;
 import com.example.InternalControl.service.user.UserOrganizationService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
-import org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.*;
@@ -30,12 +26,11 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 /**
- * @author TriTacLe
- * @since 1.0
+ * Integration tests for TrainingRecordController using TestContainers.
  */
-@WebMvcTest(controllers = TrainingRecordController.class, excludeAutoConfiguration = {DataSourceAutoConfiguration.class, HibernateJpaAutoConfiguration.class})
+@SpringBootTest
 @AutoConfigureMockMvc(addFilters = false)
-class TrainingRecordControllerTest {
+class TrainingRecordControllerTest extends AbstractIntegrationTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -47,103 +42,141 @@ class TrainingRecordControllerTest {
     private TrainingRecordService trainingRecordService;
 
     @MockBean
-    private JwtService jwtService;
-
-    @MockBean
     private UserOrganizationService userOrgService;
 
-    private TrainingRecord mockTraining;
+    private static final Integer ORG_NUMBER = 937219997;
+    private static final String BASE_URL = "/api/v1/training";
 
     @BeforeEach
     void setUp() {
-        CustomUserDetails userDetails = new CustomUserDetails(1L, "test@example.com", "password", 
-            Collections.singletonList(new SimpleGrantedAuthority("ROLE_ADMIN")));
-        
-        Authentication auth = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
-        SecurityContextHolder.getContext().setAuthentication(auth);
-        
         when(userOrgService.isUserInOrganization(anyLong(), anyInt())).thenReturn(true);
-        
-        mockTraining = TrainingRecord.builder()
-                .trainingRecordId(1L)
-                .orgNumber(937219997)
-                .build();
     }
 
     @Test
-    void getAllTrainingRecords_AsAdmin_ReturnsOk() throws Exception {
-        List<TrainingRecord> records = Arrays.asList(mockTraining);
-        when(trainingRecordService.getTrainingRecordsByOrg(anyInt())).thenReturn(records);
+    @WithMockUser(roles = {"EMPLOYEE"})
+    void getTrainingRecords_AsEmployee_ReturnsOk() throws Exception {
+        // Given
+        when(trainingRecordService.getTrainingRecordsByOrg(ORG_NUMBER)).thenReturn(List.of());
 
-        mockMvc.perform(get("/api/v1/training")
-                        .param("orgNumber", "937219997"))
+        // When & Then
+        mockMvc.perform(get(BASE_URL)
+                        .param("orgNumber", ORG_NUMBER.toString()))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    @WithMockUser(roles = {"EMPLOYEE"})
+    void getTrainingRecord_AsEmployee_ReturnsOk() throws Exception {
+        // Given
+        TrainingRecord record = new TrainingRecord();
+        record.setTrainingRecordId(1L);
+        record.setTitle("Training");
+
+        when(trainingRecordService.getTrainingRecord(1L, ORG_NUMBER)).thenReturn(record);
+
+        // When & Then
+        mockMvc.perform(get(BASE_URL + "/1")
+                        .param("orgNumber", ORG_NUMBER.toString()))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0]").exists());
+                .andExpect(jsonPath("$.trainingRecordId").value(1));
     }
 
     @Test
-    void getAllTrainingRecords_AsManager_ReturnsOk() throws Exception {
-        List<TrainingRecord> records = Arrays.asList(mockTraining);
-        when(trainingRecordService.getTrainingRecordsByOrg(anyInt())).thenReturn(records);
+    @WithMockUser(roles = {"MANAGER"})
+    void createTrainingRecord_AsManager_ReturnsCreated() throws Exception {
+        // Given
+        TrainingRecordRequest request = new TrainingRecordRequest();
+        request.setUserId(1L);
+        request.setTrainingType(TrainingType.FOOD_HYGIENE);
+        request.setTitle("Food Hygiene Training");
 
-        mockMvc.perform(get("/api/v1/training")
-                        .param("orgNumber", "937219997"))
+        TrainingRecord record = new TrainingRecord();
+        record.setTrainingRecordId(1L);
+        record.setTitle("Food Hygiene Training");
+
+        when(trainingRecordService.createTrainingRecord(any(), eq(ORG_NUMBER), anyLong()))
+                .thenReturn(record);
+
+        // When & Then
+        mockMvc.perform(post(BASE_URL)
+                        .param("orgNumber", ORG_NUMBER.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.trainingRecordId").value(1));
+    }
+
+    @Test
+    @WithMockUser(roles = {"EMPLOYEE"})
+    void createTrainingRecord_AsEmployee_ReturnsForbidden() throws Exception {
+        // Given
+        TrainingRecordRequest request = new TrainingRecordRequest();
+        request.setUserId(1L);
+        request.setTrainingType(TrainingType.FOOD_HYGIENE);
+        request.setTitle("Food Hygiene Training");
+
+        // When & Then
+        mockMvc.perform(post(BASE_URL)
+                        .param("orgNumber", ORG_NUMBER.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    @WithMockUser(roles = {"MANAGER"})
+    void updateTrainingRecord_AsManager_ReturnsOk() throws Exception {
+        // Given
+        TrainingRecordRequest request = new TrainingRecordRequest();
+        request.setTitle("Updated Title");
+
+        TrainingRecord record = new TrainingRecord();
+        record.setTrainingRecordId(1L);
+        record.setTitle("Updated Title");
+
+        when(trainingRecordService.updateTrainingRecord(eq(1L), any(), eq(ORG_NUMBER)))
+                .thenReturn(record);
+
+        // When & Then
+        mockMvc.perform(put(BASE_URL + "/1")
+                        .param("orgNumber", ORG_NUMBER.toString())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isOk());
     }
 
     @Test
-    void getAllTrainingRecords_ReturnsOk() throws Exception {
-        List<TrainingRecord> records = Arrays.asList(mockTraining);
-        when(trainingRecordService.getTrainingRecordsByOrg(anyInt())).thenReturn(records);
-
-        mockMvc.perform(get("/api/v1/training")
-                        .param("orgNumber", "937219997"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void getTrainingRecordById_Existing_ReturnsOk() throws Exception {
-        when(trainingRecordService.getTrainingRecord(anyLong(), anyInt())).thenReturn(mockTraining);
-
-        mockMvc.perform(get("/api/v1/training/1")
-                        .param("orgNumber", "937219997"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void getTrainingRecordsByUser_ReturnsUserRecords() throws Exception {
-        List<TrainingRecord> records = Arrays.asList(mockTraining);
-        when(trainingRecordService.getTrainingRecordsByUserAndOrg(anyLong(), anyInt())).thenReturn(records);
-
-        mockMvc.perform(get("/api/v1/training/user/1")
-                        .param("orgNumber", "937219997"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void getExpiringTraining_ReturnsExpiringRecords() throws Exception {
-        List<TrainingRecord> records = Arrays.asList(mockTraining);
-        when(trainingRecordService.getExpiringTrainingRecords(anyInt(), anyInt())).thenReturn(records);
-
-        mockMvc.perform(get("/api/v1/training/expiring")
-                        .param("orgNumber", "937219997")
-                        .param("days", "30"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void deleteTrainingRecord_ReturnsNoContent() throws Exception {
-        mockMvc.perform(delete("/api/v1/training/1")
-                        .param("orgNumber", "937219997"))
+    @WithMockUser(roles = {"ADMIN"})
+    void deleteTrainingRecord_AsAdmin_ReturnsNoContent() throws Exception {
+        // When & Then
+        mockMvc.perform(delete(BASE_URL + "/1")
+                        .param("orgNumber", ORG_NUMBER.toString()))
                 .andExpect(status().isNoContent());
     }
 
     @Test
-    void getTrainingStatistics_AsAdmin_ReturnsOk() throws Exception {
-        when(trainingRecordService.getExpiringCount(anyInt())).thenReturn(5L);
+    @WithMockUser(roles = {"MANAGER"})
+    void completeTrainingRecord_AsManager_ReturnsOk() throws Exception {
+        // Given
+        TrainingRecord record = new TrainingRecord();
+        record.setTrainingRecordId(1L);
+        record.setStatus(TrainingStatus.COMPLETED);
 
-        mockMvc.perform(get("/api/v1/training/expiring/count")
-                        .param("orgNumber", "937219997"))
+        when(trainingRecordService.completeTrainingRecord(1L, ORG_NUMBER, null))
+                .thenReturn(record);
+
+        // When & Then
+        mockMvc.perform(post(BASE_URL + "/1/complete")
+                        .param("orgNumber", ORG_NUMBER.toString()))
                 .andExpect(status().isOk());
+    }
+
+    @Test
+    @WithMockUser(roles = {"EMPLOYEE"})
+    void completeTrainingRecord_AsEmployee_ReturnsForbidden() throws Exception {
+        // When & Then - only ADMIN/MANAGER can complete
+        mockMvc.perform(post(BASE_URL + "/1/complete")
+                        .param("orgNumber", ORG_NUMBER.toString()))
+                .andExpect(status().isForbidden());
     }
 }
